src/Base/main/default/objects/Rigger_Job__c/Rigger_Job__c.object-meta.xml
<CustomObject>
    <label>Rigger Job</label>
    <nameField>
        <label>Rigger Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rigger Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>