src/Base/main/default/objects/Rigger_Job__c/fields/Actual_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_Spent__c</fullName>
    <label>Actual Time Spent</label>
    <summarizedField>Rigger_Job_Time_Entry__c.Total_Time__c</summarizedField>
    <summaryForeignKey>Rigger_Job_Time_Entry__c.Rigger_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>