src/Base/main/default/objects/Rigger_Job__c/fields/Actual_Time_Spent_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_Spent_Hours__c</fullName>
    <formula>Actual_Time_Spent__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Time Spent (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>