src/Base/main/default/objects/Rigger_Job__c/fields/ActualEnd__c.field-meta.xml
<CustomField>
    <fullName>ActualEnd__c</fullName>
    <label>ActualEnd</label>
    <type>DateTime</type>
</CustomField>