src/Base/main/default/objects/Rigger_Job__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Order</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Rigger Jobs</relationshipLabel>
    <relationshipName>Rigger_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>