src/Base/main/default/objects/Rigger_Job__c/fields/ExpectedTime__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTime__c</fullName>
    <label>ExpectedTime</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>