src/Base/main/default/objects/Rigger_Job__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Barrie</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>Whitefish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>