src/Base/main/default/objects/Rigger_Job__c/fields/list_order__c.field-meta.xml
<CustomField>
    <fullName>list_order__c</fullName>
    <label>List Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>