src/Base/main/default/objects/Rigger_Job__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rigger Jobs</relationshipLabel>
    <relationshipName>Rigger_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>