src/Base/main/default/objects/Rigger_Job__c/fields/Non_Warranty_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Warranty_Time__c</fullName>
    <label>Non-Warranty Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>