src/Base/main/default/objects/Rigger_Job__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Rigger Jobs</relationshipLabel>
    <relationshipName>Rigger_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>